--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
   background-color: cornflowerblue;
   max-width: 100%;
   max-height: 100%;
+  font-family: 'Bangers', cursive;
 }
 #layer1,
 #layer2,
@@ -24,6 +25,7 @@ body {
 #player,
 #angler1,
 #angler2,
-#lucky {
+#lucky,
+#projectile {
   display: none;
 }
